// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Character /> renders the Character component correctly 1`] = `
<styled.div>
  <MovieDetails
    movie={
      Object {
        "characters": Array [
          "https://swapi.co/api/people/1/",
          "https://swapi.co/api/people/2/",
          "https://swapi.co/api/people/3/",
          "https://swapi.co/api/people/4/",
          "https://swapi.co/api/people/5/",
          "https://swapi.co/api/people/10/",
          "https://swapi.co/api/people/13/",
          "https://swapi.co/api/people/14/",
          "https://swapi.co/api/people/18/",
          "https://swapi.co/api/people/20/",
          "https://swapi.co/api/people/21/",
          "https://swapi.co/api/people/22/",
          "https://swapi.co/api/people/23/",
          "https://swapi.co/api/people/24/",
          "https://swapi.co/api/people/25/",
          "https://swapi.co/api/people/26/",
        ],
        "created": "2014-12-12T11:26:24.656000Z",
        "director": "Irvin Kershner",
        "edited": "2017-04-19T10:57:29.544256Z",
        "episode_id": 5,
        "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
        "planets": Array [
          "https://swapi.co/api/planets/4/",
          "https://swapi.co/api/planets/5/",
          "https://swapi.co/api/planets/6/",
          "https://swapi.co/api/planets/27/",
        ],
        "producer": "Gary Kurtz, Rick McCallum",
        "release_date": "1980-05-17",
        "species": Array [
          "https://swapi.co/api/species/6/",
          "https://swapi.co/api/species/7/",
          "https://swapi.co/api/species/3/",
          "https://swapi.co/api/species/2/",
          "https://swapi.co/api/species/1/",
        ],
        "starships": Array [
          "https://swapi.co/api/starships/15/",
          "https://swapi.co/api/starships/10/",
          "https://swapi.co/api/starships/11/",
          "https://swapi.co/api/starships/12/",
          "https://swapi.co/api/starships/21/",
          "https://swapi.co/api/starships/22/",
          "https://swapi.co/api/starships/23/",
          "https://swapi.co/api/starships/3/",
          "https://swapi.co/api/starships/17/",
        ],
        "title": "The Empire Strikes Back",
        "url": "https://swapi.co/api/films/2/",
        "vehicles": Array [
          "https://swapi.co/api/vehicles/8/",
          "https://swapi.co/api/vehicles/14/",
          "https://swapi.co/api/vehicles/16/",
          "https://swapi.co/api/vehicles/18/",
          "https://swapi.co/api/vehicles/19/",
          "https://swapi.co/api/vehicles/20/",
        ],
      }
    }
  />
  <table
    className="fl-table"
  >
    <thead>
      <tr>
        <th
          className="toggle name"
          onClick={[Function]}
        >
          Name 
        </th>
        <th
          className="toggle-gender"
        >
          Gender
          <select
            onChange={[Function]}
            value="Filter"
          >
            <option
              defaultValue="Select Gender"
              disabled={true}
            >
              Filter
            </option>
            <option
              value="M"
            >
              M
            </option>
            <option
              value="F"
            >
              F
            </option>
          </select>
        </th>
        <th
          className="toggle height"
          onClick={[Function]}
        >
          Height 
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="Eze"
      >
        <td>
          Eze
        </td>
        <td>
          M
        </td>
        <td>
          300cm
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td
          className="total"
        >
          Total: 300cm (9ft/118.00in)
        </td>
      </tr>
    </tbody>
  </table>
</styled.div>
`;

exports[`<Character /> should call the mock name function 1`] = `<PreLoader />`;

exports[`<Character /> should call the mock onChange function 1`] = `
<Character
  characters={
    Array [
      Object {
        "gender": "male",
        "height": "300",
        "name": "Eze",
      },
    ]
  }
  getMovie={[MockFunction]}
  getMovies={[MockFunction]}
  movie={
    Object {
      "characters": Array [
        "https://swapi.co/api/people/1/",
        "https://swapi.co/api/people/2/",
        "https://swapi.co/api/people/3/",
        "https://swapi.co/api/people/4/",
        "https://swapi.co/api/people/5/",
        "https://swapi.co/api/people/10/",
        "https://swapi.co/api/people/13/",
        "https://swapi.co/api/people/14/",
        "https://swapi.co/api/people/18/",
        "https://swapi.co/api/people/20/",
        "https://swapi.co/api/people/21/",
        "https://swapi.co/api/people/22/",
        "https://swapi.co/api/people/23/",
        "https://swapi.co/api/people/24/",
        "https://swapi.co/api/people/25/",
        "https://swapi.co/api/people/26/",
      ],
      "created": "2014-12-12T11:26:24.656000Z",
      "director": "Irvin Kershner",
      "edited": "2017-04-19T10:57:29.544256Z",
      "episode_id": 5,
      "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
      "planets": Array [
        "https://swapi.co/api/planets/4/",
        "https://swapi.co/api/planets/5/",
        "https://swapi.co/api/planets/6/",
        "https://swapi.co/api/planets/27/",
      ],
      "producer": "Gary Kurtz, Rick McCallum",
      "release_date": "1980-05-17",
      "species": Array [
        "https://swapi.co/api/species/6/",
        "https://swapi.co/api/species/7/",
        "https://swapi.co/api/species/3/",
        "https://swapi.co/api/species/2/",
        "https://swapi.co/api/species/1/",
      ],
      "starships": Array [
        "https://swapi.co/api/starships/15/",
        "https://swapi.co/api/starships/10/",
        "https://swapi.co/api/starships/11/",
        "https://swapi.co/api/starships/12/",
        "https://swapi.co/api/starships/21/",
        "https://swapi.co/api/starships/22/",
        "https://swapi.co/api/starships/23/",
        "https://swapi.co/api/starships/3/",
        "https://swapi.co/api/starships/17/",
      ],
      "title": "The Empire Strikes Back",
      "url": "https://swapi.co/api/films/2/",
      "vehicles": Array [
        "https://swapi.co/api/vehicles/8/",
        "https://swapi.co/api/vehicles/14/",
        "https://swapi.co/api/vehicles/16/",
        "https://swapi.co/api/vehicles/18/",
        "https://swapi.co/api/vehicles/19/",
        "https://swapi.co/api/vehicles/20/",
      ],
    }
  }
  movies={
    Array [
      Object {
        "characters": Array [
          "https://swapi.co/api/people/1/",
          "https://swapi.co/api/people/2/",
          "https://swapi.co/api/people/3/",
          "https://swapi.co/api/people/4/",
          "https://swapi.co/api/people/5/",
          "https://swapi.co/api/people/10/",
          "https://swapi.co/api/people/13/",
          "https://swapi.co/api/people/14/",
          "https://swapi.co/api/people/18/",
          "https://swapi.co/api/people/20/",
          "https://swapi.co/api/people/21/",
          "https://swapi.co/api/people/22/",
          "https://swapi.co/api/people/23/",
          "https://swapi.co/api/people/24/",
          "https://swapi.co/api/people/25/",
          "https://swapi.co/api/people/26/",
        ],
        "created": "2014-12-12T11:26:24.656000Z",
        "director": "Irvin Kershner",
        "edited": "2017-04-19T10:57:29.544256Z",
        "episode_id": 5,
        "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
        "planets": Array [
          "https://swapi.co/api/planets/4/",
          "https://swapi.co/api/planets/5/",
          "https://swapi.co/api/planets/6/",
          "https://swapi.co/api/planets/27/",
        ],
        "producer": "Gary Kurtz, Rick McCallum",
        "release_date": "1980-05-17",
        "species": Array [
          "https://swapi.co/api/species/6/",
          "https://swapi.co/api/species/7/",
          "https://swapi.co/api/species/3/",
          "https://swapi.co/api/species/2/",
          "https://swapi.co/api/species/1/",
        ],
        "starships": Array [
          "https://swapi.co/api/starships/15/",
          "https://swapi.co/api/starships/10/",
          "https://swapi.co/api/starships/11/",
          "https://swapi.co/api/starships/12/",
          "https://swapi.co/api/starships/21/",
          "https://swapi.co/api/starships/22/",
          "https://swapi.co/api/starships/23/",
          "https://swapi.co/api/starships/3/",
          "https://swapi.co/api/starships/17/",
        ],
        "title": "The Empire Strikes Back",
        "url": "https://swapi.co/api/films/2/",
        "vehicles": Array [
          "https://swapi.co/api/vehicles/8/",
          "https://swapi.co/api/vehicles/14/",
          "https://swapi.co/api/vehicles/16/",
          "https://swapi.co/api/vehicles/18/",
          "https://swapi.co/api/vehicles/19/",
          "https://swapi.co/api/vehicles/20/",
        ],
      },
    ]
  }
  selectMovie={[MockFunction]}
  setCharacters={
    [MockFunction] {
      "calls": Array [
        Array [
          Array [],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "khblae",
            "rules": Array [
              "
  margin: 10px 70px 70px;
  font-family: 'Open Sans', sans-serif;
  width: 100%;

  @media (max-width: 750px) {
    margin: 0;
  }
  .fl-table {
    border-radius: 5px;
    font-size: 12px;
    font-weight: normal;
    border: none;
    border-collapse: collapse;
    width: 100%;
    max-width: 100%;
    white-space: nowrap;
    background-color: ",
              "#f7e523",
              ";
    .toggle {
      cursor: pointer;
    }

    .toggle-gender {
      display: flex;
      justify-content: space-evenly;
    }

    .total {
      font-weight: bold;
    }
  }

  .fl-table td,
  .fl-table th {
    text-align: center;
    padding: 8px;
  }

  .fl-table td {
    border: 1px solid ",
              "#f7e523",
              ";
    border-bottom: 0.5px solid ",
              "#f7e523",
              ";
    font-size: 12px;
    background-color: ",
              "#000",
              ";
    color: ",
              "#f7e523",
              ";
  }

  .fl-table thead th {
    color: ",
              "#000",
              ";
    background: ",
              "#f7e523",
              ";
    font-weight: bold;
    font-size: 1rem;
    border: 1px solid ",
              "#f7e523",
              ";
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="sc-bxivhb khblae"
      >
        <MovieDetails
          movie={
            Object {
              "characters": Array [
                "https://swapi.co/api/people/1/",
                "https://swapi.co/api/people/2/",
                "https://swapi.co/api/people/3/",
                "https://swapi.co/api/people/4/",
                "https://swapi.co/api/people/5/",
                "https://swapi.co/api/people/10/",
                "https://swapi.co/api/people/13/",
                "https://swapi.co/api/people/14/",
                "https://swapi.co/api/people/18/",
                "https://swapi.co/api/people/20/",
                "https://swapi.co/api/people/21/",
                "https://swapi.co/api/people/22/",
                "https://swapi.co/api/people/23/",
                "https://swapi.co/api/people/24/",
                "https://swapi.co/api/people/25/",
                "https://swapi.co/api/people/26/",
              ],
              "created": "2014-12-12T11:26:24.656000Z",
              "director": "Irvin Kershner",
              "edited": "2017-04-19T10:57:29.544256Z",
              "episode_id": 5,
              "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
              "planets": Array [
                "https://swapi.co/api/planets/4/",
                "https://swapi.co/api/planets/5/",
                "https://swapi.co/api/planets/6/",
                "https://swapi.co/api/planets/27/",
              ],
              "producer": "Gary Kurtz, Rick McCallum",
              "release_date": "1980-05-17",
              "species": Array [
                "https://swapi.co/api/species/6/",
                "https://swapi.co/api/species/7/",
                "https://swapi.co/api/species/3/",
                "https://swapi.co/api/species/2/",
                "https://swapi.co/api/species/1/",
              ],
              "starships": Array [
                "https://swapi.co/api/starships/15/",
                "https://swapi.co/api/starships/10/",
                "https://swapi.co/api/starships/11/",
                "https://swapi.co/api/starships/12/",
                "https://swapi.co/api/starships/21/",
                "https://swapi.co/api/starships/22/",
                "https://swapi.co/api/starships/23/",
                "https://swapi.co/api/starships/3/",
                "https://swapi.co/api/starships/17/",
              ],
              "title": "The Empire Strikes Back",
              "url": "https://swapi.co/api/films/2/",
              "vehicles": Array [
                "https://swapi.co/api/vehicles/8/",
                "https://swapi.co/api/vehicles/14/",
                "https://swapi.co/api/vehicles/16/",
                "https://swapi.co/api/vehicles/18/",
                "https://swapi.co/api/vehicles/19/",
                "https://swapi.co/api/vehicles/20/",
              ],
            }
          }
        >
          <styled.div>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-EHOje",
                    "isStatic": false,
                    "lastClassName": "iDJPse",
                    "rules": Array [
                      "
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
  margin: 2rem 0;

  .content {
    background-color: ",
                      "#000",
                      ";
    height: 300px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;

    @media (max-width: 820px) {
      height: auto;
    }

    .content-details {
      display: flex;
      flex-wrap: wrap;
      width: 100%;
      justify-content: space-evenly;
      padding: 2rem;
      @media (max-width: 820px) {
        padding: 0;
      }
      .item {
        display: flex;
        flex-direction: column;
        margin: 1rem;
        text-align: center;
        h4 {
          color: ",
                      "#f7e523",
                      ";
          font-family: 'Supermercado One', cursive;
        }

        p {
          color: #ffffff;
          font-family: 'Open Sans', sans-serif;
          padding: 0;
        }
      }
    }
  }
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-EHOje",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="sc-EHOje iDJPse"
              >
                <div
                  className="content"
                >
                  <div
                    className="content-details"
                  >
                    <div
                      className="item"
                    >
                      <h4>
                        Title
                      </h4>
                      <p>
                        The Empire Strikes Back
                      </p>
                    </div>
                    <div
                      className="item"
                    >
                      <h4>
                        Director
                      </h4>
                      <p>
                        Irvin Kershner
                      </p>
                    </div>
                    <div
                      className="item"
                    >
                      <h4>
                        Producer
                      </h4>
                      <p>
                        Gary Kurtz, Rick McCallum
                      </p>
                    </div>
                    <div
                      className="item"
                    >
                      <h4>
                        Release Date
                      </h4>
                      <p>
                        1980-05-17
                      </p>
                    </div>
                  </div>
                  <OpeningCrawl
                    opening_crawl="It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space...."
                  >
                    <styled.div>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-bZQynM",
                              "isStatic": false,
                              "lastClassName": "eRjFvC",
                              "rules": Array [
                                "
  display: flex;
  color: ",
                                "#f7e523",
                                ";
  padding: 2rem;
  font-family: 'Supermercado One', cursive;
",
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-bZQynM",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="sc-bZQynM eRjFvC"
                        >
                          <marquee
                            behavior="scroll"
                            direction="left"
                          >
                            It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....
                          </marquee>
                        </div>
                      </StyledComponent>
                    </styled.div>
                  </OpeningCrawl>
                </div>
              </div>
            </StyledComponent>
          </styled.div>
        </MovieDetails>
        <table
          className="fl-table"
        >
          <thead>
            <tr>
              <th
                className="toggle name"
                onClick={[Function]}
              >
                Name 
              </th>
              <th
                className="toggle-gender"
              >
                Gender
                <select
                  onChange={[Function]}
                  value="Filter"
                >
                  <option
                    defaultValue="Select Gender"
                    disabled={true}
                  >
                    Filter
                  </option>
                  <option
                    value="M"
                  >
                    M
                  </option>
                  <option
                    value="F"
                  >
                    F
                  </option>
                </select>
              </th>
              <th
                className="toggle height"
                onClick={[Function]}
              >
                Height 
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              key="Eze"
            >
              <td>
                Eze
              </td>
              <td>
                M
              </td>
              <td>
                300cm
              </td>
            </tr>
            <tr>
              <td />
              <td />
              <td
                className="total"
              >
                Total: 300cm (9ft/118.00in)
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </StyledComponent>
  </styled.div>
</Character>
`;

exports[`<Character /> should call the mock onClick name function 1`] = `
<styled.div>
  <MovieDetails
    movie={
      Object {
        "characters": Array [
          "https://swapi.co/api/people/1/",
          "https://swapi.co/api/people/2/",
          "https://swapi.co/api/people/3/",
          "https://swapi.co/api/people/4/",
          "https://swapi.co/api/people/5/",
          "https://swapi.co/api/people/10/",
          "https://swapi.co/api/people/13/",
          "https://swapi.co/api/people/14/",
          "https://swapi.co/api/people/18/",
          "https://swapi.co/api/people/20/",
          "https://swapi.co/api/people/21/",
          "https://swapi.co/api/people/22/",
          "https://swapi.co/api/people/23/",
          "https://swapi.co/api/people/24/",
          "https://swapi.co/api/people/25/",
          "https://swapi.co/api/people/26/",
        ],
        "created": "2014-12-12T11:26:24.656000Z",
        "director": "Irvin Kershner",
        "edited": "2017-04-19T10:57:29.544256Z",
        "episode_id": 5,
        "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
        "planets": Array [
          "https://swapi.co/api/planets/4/",
          "https://swapi.co/api/planets/5/",
          "https://swapi.co/api/planets/6/",
          "https://swapi.co/api/planets/27/",
        ],
        "producer": "Gary Kurtz, Rick McCallum",
        "release_date": "1980-05-17",
        "species": Array [
          "https://swapi.co/api/species/6/",
          "https://swapi.co/api/species/7/",
          "https://swapi.co/api/species/3/",
          "https://swapi.co/api/species/2/",
          "https://swapi.co/api/species/1/",
        ],
        "starships": Array [
          "https://swapi.co/api/starships/15/",
          "https://swapi.co/api/starships/10/",
          "https://swapi.co/api/starships/11/",
          "https://swapi.co/api/starships/12/",
          "https://swapi.co/api/starships/21/",
          "https://swapi.co/api/starships/22/",
          "https://swapi.co/api/starships/23/",
          "https://swapi.co/api/starships/3/",
          "https://swapi.co/api/starships/17/",
        ],
        "title": "The Empire Strikes Back",
        "url": "https://swapi.co/api/films/2/",
        "vehicles": Array [
          "https://swapi.co/api/vehicles/8/",
          "https://swapi.co/api/vehicles/14/",
          "https://swapi.co/api/vehicles/16/",
          "https://swapi.co/api/vehicles/18/",
          "https://swapi.co/api/vehicles/19/",
          "https://swapi.co/api/vehicles/20/",
        ],
      }
    }
  />
  <table
    className="fl-table"
  >
    <thead>
      <tr>
        <th
          className="toggle name"
          onClick={[Function]}
        >
          Name 
          <span>
            ↑
          </span>
        </th>
        <th
          className="toggle-gender"
        >
          Gender
          <select
            onChange={[Function]}
            value="Filter"
          >
            <option
              defaultValue="Select Gender"
              disabled={true}
            >
              Filter
            </option>
            <option
              value="M"
            >
              M
            </option>
            <option
              value="F"
            >
              F
            </option>
          </select>
        </th>
        <th
          className="toggle height"
          onClick={[Function]}
        >
          Height 
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="Eze"
      >
        <td>
          Eze
        </td>
        <td>
          M
        </td>
        <td>
          300cm
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td
          className="total"
        >
          Total: 300cm (9ft/118.00in)
        </td>
      </tr>
    </tbody>
  </table>
</styled.div>
`;

exports[`<Character /> should call the mock onClick name function 2`] = `
<styled.div>
  <MovieDetails
    movie={
      Object {
        "characters": Array [
          "https://swapi.co/api/people/1/",
          "https://swapi.co/api/people/2/",
          "https://swapi.co/api/people/3/",
          "https://swapi.co/api/people/4/",
          "https://swapi.co/api/people/5/",
          "https://swapi.co/api/people/10/",
          "https://swapi.co/api/people/13/",
          "https://swapi.co/api/people/14/",
          "https://swapi.co/api/people/18/",
          "https://swapi.co/api/people/20/",
          "https://swapi.co/api/people/21/",
          "https://swapi.co/api/people/22/",
          "https://swapi.co/api/people/23/",
          "https://swapi.co/api/people/24/",
          "https://swapi.co/api/people/25/",
          "https://swapi.co/api/people/26/",
        ],
        "created": "2014-12-12T11:26:24.656000Z",
        "director": "Irvin Kershner",
        "edited": "2017-04-19T10:57:29.544256Z",
        "episode_id": 5,
        "opening_crawl": "It is a dark time for the
Rebellion. Although the Death
Star has been destroyed,
Imperial troops have driven the
Rebel forces from their hidden
base and pursued them across
the galaxy.

Evading the dreaded Imperial
Starfleet, a group of freedom
fighters led by Luke Skywalker
has established a new secret
base on the remote ice world
of Hoth.

The evil lord Darth Vader,
obsessed with finding young
Skywalker, has dispatched
thousands of remote probes into
the far reaches of space....",
        "planets": Array [
          "https://swapi.co/api/planets/4/",
          "https://swapi.co/api/planets/5/",
          "https://swapi.co/api/planets/6/",
          "https://swapi.co/api/planets/27/",
        ],
        "producer": "Gary Kurtz, Rick McCallum",
        "release_date": "1980-05-17",
        "species": Array [
          "https://swapi.co/api/species/6/",
          "https://swapi.co/api/species/7/",
          "https://swapi.co/api/species/3/",
          "https://swapi.co/api/species/2/",
          "https://swapi.co/api/species/1/",
        ],
        "starships": Array [
          "https://swapi.co/api/starships/15/",
          "https://swapi.co/api/starships/10/",
          "https://swapi.co/api/starships/11/",
          "https://swapi.co/api/starships/12/",
          "https://swapi.co/api/starships/21/",
          "https://swapi.co/api/starships/22/",
          "https://swapi.co/api/starships/23/",
          "https://swapi.co/api/starships/3/",
          "https://swapi.co/api/starships/17/",
        ],
        "title": "The Empire Strikes Back",
        "url": "https://swapi.co/api/films/2/",
        "vehicles": Array [
          "https://swapi.co/api/vehicles/8/",
          "https://swapi.co/api/vehicles/14/",
          "https://swapi.co/api/vehicles/16/",
          "https://swapi.co/api/vehicles/18/",
          "https://swapi.co/api/vehicles/19/",
          "https://swapi.co/api/vehicles/20/",
        ],
      }
    }
  />
  <table
    className="fl-table"
  >
    <thead>
      <tr>
        <th
          className="toggle name"
          onClick={[Function]}
        >
          Name 
        </th>
        <th
          className="toggle-gender"
        >
          Gender
          <select
            onChange={[Function]}
            value="Filter"
          >
            <option
              defaultValue="Select Gender"
              disabled={true}
            >
              Filter
            </option>
            <option
              value="M"
            >
              M
            </option>
            <option
              value="F"
            >
              F
            </option>
          </select>
        </th>
        <th
          className="toggle height"
          onClick={[Function]}
        >
          Height 
          <span>
            ↑
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="Eze"
      >
        <td>
          Eze
        </td>
        <td>
          M
        </td>
        <td>
          300cm
        </td>
      </tr>
      <tr>
        <td />
        <td />
        <td
          className="total"
        >
          Total: 300cm (9ft/118.00in)
        </td>
      </tr>
    </tbody>
  </table>
</styled.div>
`;
